# intent

./: .gitignore  Cargo.toml  DESIGN.md  LANGUAGE.md  LICENSE-APACHE  README.md  build.rs  comment.md  flake.nix  justfile
.claude/: settings.local.json
docs/: EFFECT_SEMANTICS.md  VERIFICATION_GUIDE.md
examples/: EFFECT_QUICK_REFERENCE.md
examples/bounded_vars/: minimal.intent  minimal2.intent  minimal3.intent  minimal4.intent  simple.intent  system.intent  test.intent  test2.intent
examples/composed/: README.md  mental_model_demo.intent  order_independence.intent  order_payment.intent  producer_consumer.intent  request_response.intent
examples/distributed/: system.intent
examples/ecommerce/: system.intent
examples/messaging/: test.intent
examples/minimal/: rationale.json  system.intent
examples/payment/: system.intent
examples/refinement/: AuthDetailed.tla  auth.intent
examples/tla_primitives/: system.intent
known_gaps/nucleus/: REPORT.md
src/: benchmark.rs  coverage.rs  lib.rs  main.rs
src/behavioral/: composition.rs  contract.rs  mod.rs  normalize.rs  refinement.rs  statemachine.rs  verification.rs
src/diagnostic/: mod.rs  recovery.rs  suggestions.rs
src/linter/: checks.rs  mod.rs
src/parser/: ast.rs  intent.lalrpop  mod.rs
src/plan/: mod.rs
src/rationale/: mod.rs
src/structural/: c3.rs  cache.rs  connector.rs  mod.rs
src/transpile/: executable.rs  mod.rs  tla.rs
src/types/: checker.rs  inference.rs  mod.rs
stdlib/: patterns.intent  std.intent
tests/: integration.rs  stdlib.rs  structural_ts.rs  tla_primitives.rs
(+117 files in other folders)
